# job-evaluation

./: .env.example  .env.production.example  .gitignore  1. ОД Директора ДБиКРС.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  Калькулятор Hay Group.md  Калькулятор Hay Group.xlsm  Постановочные таблицы Hay Group.md  Руководство_для_эксперта_по_оценке.md  Тренинг_оценка день 1 — раздатка.md  Шаблон_ведомости_оценки_должностей.docx  Шаблон_ведомости_оценки_должностей.md
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/jeval/: __init__.py  config.py  gate.py  hierarchy.py  orchestrator.py  qc.py  security.py  store.py
backend/jeval/agent/: __init__.py  agent.py  fake.py  groq_agent.py  openai_agent.py  prompt.py
backend/jeval/api/: __init__.py  deps.py  main.py
backend/jeval/domain/: __init__.py  enums.py  identity.py  models.py
backend/jeval/export/: __init__.py  fonts.py  pdf.py
backend/jeval/importer/: __init__.py  agent.py  authorities.py  docx.py  extractor.py
backend/jeval/reference/: __init__.py  levels.py  standards.py
backend/jeval/scoring/: __init__.py  (+4 more)
backend/scripts/: demo.py  seed_db.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_auth_tenants.py  test_engine.py  test_fake_agent.py  test_fake_agent_guard.py  test_gate.py  test_grades.py  test_hierarchy.py  test_importer.py  test_importer_agent.py  test_importer_authorities.py  test_openai_agent.py  test_orchestrator.py  test_qc.py  test_store.py  test_table_versioning.py  test_tables_match_xlsm.py
(+65 files in other folders)
